# Proyecto

./: CMakeLists.txt  main.cpp  tree.txt
.github/workflows/: c-cpp.yml
modules/: CJugador.cpp  CJugador.h  CTable.cpp  CTable.h  Menu.cpp  Menu.h  control-game.cpp  control-game.h  estadisticas.cpp  estadisticas.h  menu.h  util.cpp  util.h
