cmake_minimum_required(VERSION 3.29)
project(proyect)

set(CMAKE_CXX_STANDARD 20)

add_executable(proyect main.cpp)
        add_executable(modules/CTable.cpp)
        add_executable(modules/CTable.h)
        add_executable(modules/util.cpp)
        add_executable(modules/util.h)
        add_executable(modules/control-game.cpp)
        add_executable(modules/control-game.h)
        add_executable(modules/menu.h)
        add_executable(modules/estadisticas.h)
        add_executable(modules/estadisticas.cpp)
